# rust-adk

./: .dockerignore  .gitattributes  .gitignore  .releaserc.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  schema.json
.devcontainer/: Dockerfile  devcontainer.json
.flox/: env.json
.flox/env/: manifest.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  infer.yml  release.yml
.well-known/: agent.json
examples/: Dockerfile.client  Dockerfile.server  README.md  client.rs  configured_server.rs  minimal_server.rs  server_with_toolbox.rs
examples/a2a-methods/: README.md  docker-compose.yaml
examples/a2a-methods/client/: Cargo.toml  agent_authenticated_extended_card.rs  message_send.rs  message_stream.rs  push_config_delete.rs  push_config_get.rs  push_config_list.rs  push_config_set.rs  tasks_cancel.rs  tasks_get.rs  tasks_list.rs  tasks_resubscribe.rs
examples/a2a-methods/server/: Cargo.toml  main.rs
examples/ai-powered/: .env.example  README.md  docker-compose.yaml
examples/ai-powered-streaming/: .env.example  README.md  docker-compose.yaml
examples/ai-powered-streaming/client/: Cargo.toml  main.rs
examples/ai-powered-streaming/server/: Cargo.toml  main.rs
examples/ai-powered-streaming/server/.well-known/: agent.json
examples/ai-powered/client/: Cargo.toml  main.rs
examples/ai-powered/server/: Cargo.toml  main.rs
examples/ai-powered/server/.well-known/: agent.json
examples/artifacts-filesystem/: .gitignore  README.md  docker-compose.yaml
examples/artifacts-filesystem/client/: main.rs
examples/artifacts-filesystem/server/: main.rs
examples/artifacts-filesystem/server/.well-known/: agent.json
examples/artifacts-minio/: README.md  docker-compose.yaml
examples/artifacts-minio/client/: main.rs
examples/artifacts-minio/server/: main.rs
examples/artifacts-minio/server/.well-known/: agent.json
examples/auth/: README.md  docker-compose.yaml
examples/auth/client/: Cargo.toml  main.rs
examples/auth/keycloak/: realm-export.json
examples/auth/server/: Cargo.toml  main.rs
examples/default-handlers/: .env.example  README.md  docker-compose.yaml
examples/default-handlers/client/: Cargo.toml  main.rs
examples/default-handlers/server/: Cargo.toml  main.rs
examples/default-handlers/server/.well-known/: agent.json
examples/input-required/: README.md  docker-compose.yaml
examples/input-required/client/: Cargo.toml  main.rs
examples/input-required/server/: Cargo.toml  main.rs
examples/input-required/server/.well-known/: agent.json
examples/mcp/: README.md
examples/mcp/client/: Cargo.toml  main.rs
examples/mcp/server/: Cargo.toml  main.rs
examples/mcp/server/.well-known/: agent.json
examples/minimal/: README.md  docker-compose.yaml
examples/minimal/client/: Cargo.toml  main.rs
examples/minimal/server/: Cargo.toml  main.rs
examples/queue-storage/: .env.redis  README.md  docker-compose.yaml
examples/queue-storage/client/: Cargo.toml  main.rs
examples/queue-storage/server/: Cargo.toml  main.rs
examples/queue-storage/server/.well-known/: agent.json
examples/server-with-toolbox/: README.md  agent-card.json  docker-compose.yaml
examples/server-with-toolbox/client/: main.rs
examples/server-with-toolbox/server/: main.rs
examples/static-agent-card/: .env.example  README.md  docker-compose.yaml
examples/static-agent-card/client/: Cargo.toml  main.rs
examples/static-agent-card/server/: Cargo.toml  main.rs
examples/static-agent-card/server/.well-known/: agent.json
examples/streaming/: README.md  docker-compose.yaml
examples/streaming/client/: Cargo.toml  main.rs
examples/streaming/server/: Cargo.toml  main.rs
examples/streaming/server/.well-known/: agent.json
examples/tls/: README.md  docker-compose.yaml  make-certs.sh
examples/tls/certs/: .gitignore
examples/tls/client/: Cargo.toml  main.rs
examples/tls/server/: Cargo.toml  main.rs
examples/usage-metadata/: .env.example  README.md  docker-compose.yaml
examples/usage-metadata/client/: Cargo.toml  main.rs
examples/usage-metadata/server/: Cargo.toml  main.rs
examples/usage-metadata/server/.well-known/: agent.json
src/: a2a_types.rs  client.rs  config.rs  convert_schema.rs  lib.rs  server.rs  storage.rs  task_handler.rs  telemetry.rs
src/server/: agent.rs  agent_builder.rs  agent_card.rs  agent_llm_client.rs  agent_toolbox.rs  artifact_service.rs  artifact_storage.rs  artifact_storage_minio.rs  artifacts_server.rs  auth.rs  errors.rs  mcp.rs  protocol.rs  server_builder.rs  server_core.rs  storage.rs  storage_redis.rs  task_handler.rs  task_manager.rs  tls.rs  usage_tracker.rs
tests/: a2a_server_test.rs  artifacts_integration_test.rs  auth_test.rs  tls_test.rs
