[package]
name = "inference-gateway-adk"
version = "0.2.5"
edition = "2024"
description = "Agent Development Kit (ADK) for building powerful, interoperable AI agents with the Agent-to-Agent (A2A) protocol"
license = "MIT"
documentation = "https://docs.rs/inference-gateway-adk"
authors = ["Inference Gateway Team"]
repository = "https://github.com/inference-gateway/rust-adk"
homepage = "https://github.com/inference-gateway/rust-adk"
keywords = ["agent", "ai", "inference", "gateway", "a2a"]
categories = ["api-bindings", "development-tools"]

[features]
default = []
# Enable the Redis-backed `Storage` implementation. Use
# `cargo build --features redis` (or add `inference-gateway-adk = { ...,
# features = ["redis"] }` in downstream Cargo.toml) to pull it in.
redis = ["dep:redis"]

[dependencies]
inference-gateway-sdk = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["json", "http2"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["cors", "trace"] }
futures = "0.3.32"
futures-util = "0.3.32"
async-trait = "0.1.89"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
regress = "0.11.1"
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = "0.7.13"
eventsource-stream = "0.2.3"
redis = { version = "0.27.6", default-features = false, features = ["tokio-comp", "connection-manager"], optional = true }

[[example]]
name = "minimal-server"
path = "examples/minimal/server/main.rs"

[[example]]
name = "minimal-client"
path = "examples/minimal/client/main.rs"

[[example]]
name = "static-agent-card-server"
path = "examples/static-agent-card/server/main.rs"

[[example]]
name = "static-agent-card-client"
path = "examples/static-agent-card/client/main.rs"

[[example]]
name = "server-with-toolbox-server"
path = "examples/server-with-toolbox/server/main.rs"

[[example]]
name = "server-with-toolbox-client"
path = "examples/server-with-toolbox/client/main.rs"

# a2a-methods/ — one client binary per JSON-RPC method exposed by the spec.
[[example]]
name = "a2a-methods-server"
path = "examples/a2a-methods/server/main.rs"

[[example]]
name = "a2a-methods-message-send"
path = "examples/a2a-methods/client/message_send.rs"

[[example]]
name = "a2a-methods-message-stream"
path = "examples/a2a-methods/client/message_stream.rs"

[[example]]
name = "a2a-methods-tasks-get"
path = "examples/a2a-methods/client/tasks_get.rs"

[[example]]
name = "a2a-methods-tasks-list"
path = "examples/a2a-methods/client/tasks_list.rs"

[[example]]
name = "a2a-methods-tasks-cancel"
path = "examples/a2a-methods/client/tasks_cancel.rs"

[[example]]
name = "a2a-methods-push-config-set"
path = "examples/a2a-methods/client/push_config_set.rs"

[[example]]
name = "a2a-methods-push-config-get"
path = "examples/a2a-methods/client/push_config_get.rs"

[[example]]
name = "a2a-methods-push-config-list"
path = "examples/a2a-methods/client/push_config_list.rs"

[[example]]
name = "a2a-methods-push-config-delete"
path = "examples/a2a-methods/client/push_config_delete.rs"
