[package]
name = "inference-gateway-adk"
version = "0.7.0"
edition = "2024"
rust-version = "1.95.0"
description = "Agent Development Kit (ADK) for building powerful, interoperable AI agents with the Agent-to-Agent (A2A) protocol"
license = "Apache-2.0"
documentation = "https://docs.rs/inference-gateway-adk"
authors = ["Inference Gateway Team"]
repository = "https://github.com/inference-gateway/rust-adk"
homepage = "https://github.com/inference-gateway/rust-adk"
keywords = ["agent", "ai", "inference", "gateway", "a2a"]
categories = ["api-bindings", "development-tools"]

[features]
default = []
redis = ["dep:redis"]
minio = ["dep:minio", "dep:bytes"]

[dependencies]
inference-gateway-sdk = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["json", "http2"] }
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["cors", "trace", "add-extension"] }
futures = "0.3.32"
futures-util = "0.3.32"
async-trait = "0.1.89"
reqwest = { version = "0.13.3", features = ["form", "json", "stream"] }
regress = "0.11.1"
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = "0.7.18"
eventsource-stream = "0.2.3"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2.2.0"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12", "logging"] }
x509-parser = "0.18.1"
redis = { version = "1.2.1", default-features = false, features = ["tokio-comp", "connection-manager"], optional = true }
minio = { version = "0.4.0", default-features = false, features = ["rustls-tls", "ring"], optional = true }
bytes = { version = "1.11", optional = true }

[dev-dependencies]
rcgen = { version = "0.14.8", default-features = false, features = ["pem", "ring"] }
envy = "0.4.2"

# The artifacts examples are root-crate `[[example]]` targets (rather than workspace
# members) so the `minio` variant can be gated behind the crate's `minio` feature via
# `required-features`. They reuse the crate's own dependencies plus the `envy` dev-dep.
[[example]]
name = "artifacts-filesystem-server"
path = "examples/artifacts-filesystem/server/main.rs"

[[example]]
name = "artifacts-filesystem-client"
path = "examples/artifacts-filesystem/client/main.rs"

[[example]]
name = "artifacts-minio-server"
path = "examples/artifacts-minio/server/main.rs"
required-features = ["minio"]

[[example]]
name = "artifacts-minio-client"
path = "examples/artifacts-minio/client/main.rs"

# The bundled examples are full workspace members under `examples/<name>/{server,client}/`.
# Each declares its own dependencies in its own `Cargo.toml`, so a reader can see at a
# glance what a given binary actually needs. Version pins for the deps that several
# examples share are centralized below under `[workspace.dependencies]`.
[workspace]
members = [
    "examples/minimal/server",
    "examples/minimal/client",
    "examples/static-agent-card/server",
    "examples/static-agent-card/client",
    "examples/ai-powered/server",
    "examples/ai-powered/client",
    "examples/ai-powered-streaming/server",
    "examples/ai-powered-streaming/client",
    "examples/usage-metadata/server",
    "examples/usage-metadata/client",
    "examples/default-handlers/server",
    "examples/default-handlers/client",
    "examples/streaming/server",
    "examples/streaming/client",
    "examples/input-required/server",
    "examples/input-required/client",
    "examples/queue-storage/server",
    "examples/queue-storage/client",
    "examples/auth/server",
    "examples/auth/client",
    "examples/tls/server",
    "examples/tls/client",
    "examples/a2a-methods/server",
    "examples/a2a-methods/client",
]

[workspace.dependencies]
inference-gateway-sdk = "0.14.1"
tokio = { version = "1.52.3", features = ["full", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
envy = "0.4.2"
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.3", features = ["v4", "serde"] }
futures = "0.3.32"
reqwest = { version = "0.13.4", features = ["json"] }
