[package]
name = "ai-powered-streaming-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "ai-powered-streaming-server"
path = "main.rs"

[dependencies]
inference-gateway-adk = { path = "../../.." }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
envy = { workspace = true }
