[package]
name = "auth-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "auth-server"
path = "main.rs"

[dependencies]
inference-gateway-adk = { path = "../../.." }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
envy = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
