[package]
name = "default-handlers-client"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "default-handlers-client"
path = "main.rs"

[dependencies]
inference-gateway-adk = { path = "../../.." }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
