[package]
name = "default-handlers-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "default-handlers-server"
path = "main.rs"

[dependencies]
inference-gateway-adk = { path = "../../.." }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
envy = { workspace = true }
