[package]
name = "static-agent-card-client"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "static-agent-card-client"
path = "main.rs"

[dependencies]
inference-gateway-adk = { path = "../../.." }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
