[package]
name = "usage-metadata-client"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "usage-metadata-client"
path = "main.rs"

[dependencies]
inference-gateway-adk = { path = "../../.." }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
